<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:padding="10dp"
    android:background="@drawable/back_sheet">

    <TextView
        android:id="@+id/times_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/event_time"
        android:textSize="@dimen/titleSize" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:hint="@string/start_time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:hint="@string/end_time" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>