<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_premium">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/done_premium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:alpha="0.30"
        android:background="@drawable/wave1"
        android:backgroundTint="@color/premiumSecColor"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="550dp"
        android:layout_height="560dp"
        android:alpha="0.1"
        android:background="@drawable/wave1"
        android:backgroundTint="@color/white"
        android:rotation="32"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:text="@string/f1"
        android:textColor="@color/whiteTextColor"
        android:textSize="@dimen/titleSize"
        android:drawableStart="@drawable/ic_baseline_check_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/f2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:text="@string/f2"
        android:textColor="@color/whiteTextColor"
        android:textSize="@dimen/titleSize"
        android:drawableStart="@drawable/ic_baseline_check_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/f1" />

    <TextView
        android:id="@+id/f3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:text="@string/f3"
        android:textColor="@color/whiteTextColor"
        android:textSize="@dimen/titleSize"
        android:drawableStart="@drawable/ic_baseline_check_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/f2" />

    <TextView
        android:id="@+id/f4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        android:text="@string/f4"
        android:textColor="@color/whiteTextColor"
        android:textSize="@dimen/titleSize"
        android:drawableStart="@drawable/ic_baseline_check_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/f3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buy"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/f4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subs1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/back_premium_transparent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f4">

        <View
            android:id="@+id/view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:alpha="0.8"
            android:background="@drawable/star"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/raleway"
            android:textStyle="bold"
            android:text="@string/subs1"
            android:textColor="@color/whiteTextColor"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway"
            android:text="@string/buy_from_play"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:rippleColor="#3200E10D" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subs2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/back_premium_transparent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subs1">

        <View
            android:id="@+id/view2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:alpha="0.8"
            android:background="@drawable/star"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/raleway"
            android:textStyle="bold"
            android:text="@string/subs2"
            android:textColor="@color/whiteTextColor"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/raleway"
            android:text="@string/buy_from_play"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:rippleColor="#3200E10D" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#48112233" />


</androidx.constraintlayout.widget.ConstraintLayout>