<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/todoBackColor">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/todoBackColor"
                app:elevation="0dp"
                app:navigationIcon="@drawable/ic_round_arrow_back_ios_24"
                app:navigationIconColor="@color/colorAccent" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="0dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/todo_title"
                    android:maxLines="1"
                    android:nextFocusForward="@id/description"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/titleSize" />

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize"
                    app:endIconDrawable="@drawable/ic_round_close_24"
                    app:endIconMode="clear_text" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/black_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11000000"
        android:visibility="gone" />

    <include
        android:id="@+id/sheet_set_time"
        layout="@layout/sheet_set_times" />

    <include
        android:id="@+id/sheet_set_alert"
        layout="@layout/sheet_set_alert" />

    <include
        android:id="@+id/sheet_set_state"
        layout="@layout/sheet_set_state" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/whiteButtonColor"
        app:fabAlignmentMode="end"
        app:hideOnScroll="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:menu="@menu/todo_add_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twotone_access_time_24"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        app:layout_anchor="@id/bottom_appbar"
        app:tint="#fff" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>